--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "express": "^4.15.3",
     "multer": "^1.3.0",
     "pug": "^2.0.0-rc.2"
+  },
+  "engines": {
+    "node": "6.11.1",
+    "npm": "3.10.10"
   }
 }
